[GC] Enhance G1ElasticHeap to support softmx adjustment via jcmd full gc
Summary: Enhance G1ElasticHeap to support softmx adjustment via jcmd full gc

Test Plan: hotspot/test/elastic-heap

Reviewed-by: Yude Lin, Hao Tang

Issue: https://github.com/alibaba/dragonwell8/issues/212